resources/css/fabdb.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
    height: 100%;
}

* {
    scrollbar-width: thin;
}

:root {
    --button-disabled-background-color: theme("colors.gray.400");
    --button-disabled-text-color: theme("colors.white");
    --crumbs-text-color: theme('colors.white');
    --link-hover-color: theme("colors.white");
    --main-text-color: theme('colors.gray.800');
    --nav-text-color: theme('colors.white');
    --nav-hover-background-color: theme('colors.black');
}

.theme-battle {
    --theme-background: theme('backgroundColor.gray.800') url('https://fabdb2.imgix.net/assets/backgrounds/background-battle.jpg?auto=format') no-repeat top left;
    --button-primary-background-color: theme("colors.blue.600");
    --button-primary-hover-background-color: theme("colors.blue.400");
    --button-primary-text-color: theme("colors.white");
    --button-secondary-background-color: theme("colors.blue.900");
    --button-secondary-hover-background-color: theme("colors.blue.700");
    --button-secondary-text-color: theme("colors.white");
    --link-color: theme("colors.blue.500");
    --crumbs-background-color: theme('colors.blue.900');
    --nav-hover-text-color: theme('colors.blue.400');
}

.theme-library {
    --theme-background: theme('backgroundColor.gray.800') url('https://fabdb2.imgix.net/assets/backgrounds/background-library.jpg?auto=format') no-repeat top left;
    --button-primary-background-color: theme("colors.yellow.600");
    --button-primary-hover-background-color: theme("colors.yellow.500");
    --button-primary-text-color: theme("colors.white");
    --button-secondary-background-color: theme("colors.gray.600");
    --button-secondary-hover-background-color: theme("colors.gray.500");
    --button-secondary-text-color: theme("colors.white");
    --link-color: theme("colors.blue.300");
    --crumbs-background-color: theme('colors.yellow.700');
    --nav-hover-text-color: theme('colors.yellow.400');
}

.theme-skies {
    --theme-background: theme('backgroundColor.gray.200') url('https://fabdb2.imgix.net/assets/backgrounds/background-crucible.jpg?auto=format') no-repeat top left;
    --button-primary-background-color: theme("colors.red.700");
    --button-primary-hover-background-color: theme("colors.red.500");
    --button-primary-text-color: theme("colors.white");
    --button-secondary-background-color: theme("colors.red.900");
    --button-secondary-hover-background-color: theme("colors.red.700");
    --button-secondary-text-color: theme("colors.white");
    --link-color: theme("colors.red.500");
    --crumbs-background-color: theme('colors.red.900');
    --nav-hover-text-color: theme('colors.red.400');
}

.theme-default {
    --theme-background: theme('backgroundColor.gray.200') url('https://fabdb2.imgix.net/assets/backgrounds/background-uprising.jpeg?auto=format') no-repeat top center;
    --button-primary-background-color: theme("colors.red.800");
    --button-primary-hover-background-color: theme("colors.red.600");
    --button-primary-text-color: theme("colors.white");
    --button-secondary-background-color: theme("colors.orange.800");
    --button-secondary-hover-background-color: theme("colors.orange.600");
    --button-secondary-text-color: theme("colors.white");
    --link-color: theme("colors.orange.400");
    --crumbs-background-color: theme('colors.orange.800');
    --nav-hover-text-color: theme('colors.orange.400');
}

.theme-tales {
    --theme-background: theme('backgroundColor.gray.200') url('https://fabdb2.imgix.net/assets/backgrounds/background-tales-of-aria.jpg?auto=format') no-repeat top center;
    --button-primary-background-color: theme("colors.black");
    --button-primary-hover-background-color: theme("colors.green.800");
    --button-primary-text-color: theme("colors.white");
    --button-secondary-background-color: theme("colors.blue.800");
    --button-secondary-hover-background-color: theme("colors.blue.600");
    --button-secondary-text-color: theme("colors.white");
    --link-color: theme("colors.blue.400");
    --crumbs-background-color: theme('colors.blue.800');
    --nav-hover-text-color: theme('colors.blue.400');
}

.theme-monarch {
    --theme-background: theme('backgroundColor.gray.200') url('https://fabdb2.imgix.net/assets/backgrounds/background-monarch.jpg?auto=format') no-repeat top center;
    --button-primary-background-color: theme("colors.blue.700");
    --button-primary-hover-background-color: theme("colors.blue.500");
    --button-primary-text-color: theme("colors.white");
    --button-secondary-background-color: theme("colors.blue.900");
    --button-secondary-hover-background-color: theme("colors.blue.700");
    --button-secondary-text-color: theme("colors.white");
    --link-color: theme("colors.blue.400");
    --crumbs-background-color: theme('colors.orange.900');
    --nav-hover-text-color: theme('colors.blue.400');
}

.theme-aria {
    --theme-background: theme('backgroundColor.gray.200') url('https://fabdb2.imgix.net/assets/backgrounds/background-aria.jpg?auto=format') no-repeat top left;
    --button-primary-background-color: theme("colors.green.700");
    --button-primary-hover-background-color: theme("colors.green.500");
    --button-primary-text-color: theme("colors.white");
    --button-secondary-background-color: theme("colors.blue.900");
    --button-secondary-hover-background-color: theme("colors.blue.700");
    --button-secondary-text-color: theme("colors.white");
    --link-color: theme("colors.green.500");
    --crumbs-background-color: theme('colors.green.800');
    --nav-hover-text-color: theme('colors.green.400');
}
/* ... */

